[package]
name = 'ever_bls_lib'
version = '0.1.16'
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = { features = [ 'portable' ], version = '0.3.5' }
criterion = '0.3'
failure = '0.1'
rand = '0.7'
rand_chacha = '0.2'

ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.4' }
