[package]
edition = '2018'
name = 'gosh_bls_lib'
version = '0.1.83'

[dependencies]
anyhow = "1.0.80"
criterion = '0.3'
failure = '0.1'
rand = '0.7'
rand_chacha = '0.2'
blst = { features = [ 'portable' ], version = '0.3.5' }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-types.git', tag = '3.0.1' }

